git-svn-id: https://svn.hazelcast.com/svn/elastic-memory/trunk@148 51353bd8-8dbf-4efe-9e6d-88ec6fb4063a